# parsemedicalexams

./: AGENTS.md  Makefile  README.md  extraction.py  main.py  pyproject.toml  utils.py
.claude/skills/extraction-quality-audit/: README.md
.claude/skills/extraction-quality-audit/references/: report_template.md  sampling_methodology.md  verification_checklist.md
.github/workflows/: release.yml
parsemedicalexams/: __init__.py  cli.py  config.py  extraction.py  standardization.py  summarization.py  utils.py
