[project]
name = "medical-exams-parser"
version = "0.1.0"
description = "Extract and summarize medical exam reports (X-rays, MRIs, ultrasounds, etc.) with AI precision"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "tsilva"}
]
keywords = ["medical", "exam-parser", "ai", "document-processing", "radiology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai",
    "pillow",
    "pdf2image",
    "python-dotenv",
    "pydantic",
    "pyyaml",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/tsilva/medical-exams-parser"
Repository = "https://github.com/tsilva/medical-exams-parser"
Issues = "https://github.com/tsilva/medical-exams-parser/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "extraction", "standardization", "summarization", "config", "utils"]
